kubernetes/apps/http-echo.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-echo
  labels:
    k8s-app: http-echo
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: http-echo
  template:
    metadata:
      labels:
        k8s-app: http-echo
        name: http-echo
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
          - "-text=Testando http-echo"
        ports:
        - name: http
          containerPort: 5678
        resources:
          requests:
            cpu: "256m"
            memory: "512m" 

---
kind: Service
apiVersion: v1
metadata:
  name: http-echo
spec:
  selector:
    k8s-app: http-echo
  ports:
    - protocol: TCP
      port: 5678
      name: http-echo
  type: ClusterIP

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: http-echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - braga-sre.tk
    secretName: tls-secret
  rules:
  - host: braga-sre.tk
    http:
      paths:
        - path: /http-echo
          backend:
            serviceName: http-echo
            servicePort: 5678
